Issue #6915: Under Windows, os.listdir() didn't release the Global Interpreter Lock around all system calls.  Original patch by Ryan Kelly.